--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "natural": "^7.1.0",
     "nodemon": "^2.0.20",
     "telegraf": "^4.11.2"
   }
